reformat files, switch to grid in features ssection

--- a/src/lib/PageSection/PageSection.scss
+++ b/src/lib/PageSection/PageSection.scss
@@ -5,7 +5,9 @@
 	z-index: 1;
 
 	:global {
-		h1, h2, h3 {
+		h1,
+		h2,
+		h3 {
 			margin: 0;
 			color: var(--text-color-primary);
 			font-weight: 600;
