--- a/src/layout/design/DesignSection.scss
+++ b/src/layout/design/DesignSection.scss
@@ -19,7 +19,8 @@
 
 // Screenshot and wallpaper styling
 .files- {
-	&screenshot, &wallpaper {
+	&screenshot,
+	&wallpaper {
 		height: auto;
 		user-select: none;
 		-webkit-user-drag: none;
@@ -54,13 +55,20 @@
 // Design section small device support
 @media only screen and (max-width: 1024px) {
 	// Enlarge wallpaper and screenshot
-	.design-image, .files-wallpaper { width: 100% }
-	.files-screenshot { top: 0 }
+	.design-image,
+	.files-wallpaper {
+		width: 100%;
+	}
+	.files-screenshot {
+		top: 0;
+	}
 }
 
 @media only screen and (max-width: 768px) {
 	// Add some margins to account for more space available
-	.design-image { margin-top: 48px }
+	.design-image {
+		margin-top: 48px;
+	}
 
 	// Screenshot and wallpaper
 	.files- {
