--- a/src/layout/features/FeaturesSection.scss
+++ b/src/layout/features/FeaturesSection.scss
@@ -7,22 +7,18 @@
 
 		// Inner section
 		.page-section-inner {
-			@include flex($gap: 48px);
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-gap: 48px;
 		}
 	}
 
 	// Features section container
 	.features-section- {
-		&right, &left {
-			flex: 0 0 auto;
-			width: 50%;
-		}
-
 		// Left container
 		&left {
 			@include flex($align: center, $justify: center);
 			position: relative;
-			width: 50%;
 		}
 	}
 }
@@ -36,7 +32,6 @@
 
 	// Small device support
 	@media only screen and (max-width: 1164px) {
-
 		// Stack cards vertically
 		grid-template-columns: auto;
 	}
@@ -44,16 +39,14 @@
 
 // Features section small device support
 @media only screen and (max-width: 924px) {
+	:global(#features-section .page-section-inner) {
+		grid-template-columns: auto;
+	}
+
 	.features-section- {
 		// Hide showcases on mobile
 		&left {
 			display: none;
-		}
-
-		// Right portion of the section now takes up fullwidth
-		&right {
-			width: 100%;
-			margin: 0;
 		}
 	}
 
