--- a/src/layout/hero/HeroSection.scss
+++ b/src/layout/hero/HeroSection.scss
@@ -5,7 +5,6 @@
  */
 
 :global {
-
 	// Outer section
 	#hero-section {
 		position: relative;
@@ -104,7 +103,6 @@
 
 // Hero container elements
 .hero- {
-
 	// Left container
 	&left {
 		@include flex($direction: column, $justify: center);
@@ -126,7 +124,10 @@
 			border: 1px solid var(--surface-stroke-default);
 			border-radius: calc(var(--overlay-corner-radius) / 2);
 			border-radius: calc(var(--overlay-corner-radius) / 2);
-			background-color: rgba(var(--mica-tint), calc(var(--mica-tint-opacity) / 1.5));
+			background-color: rgba(
+				var(--mica-tint),
+				calc(var(--mica-tint-opacity) / 1.5)
+			);
 			box-shadow: var(--window-elevation);
 			overflow: hidden;
 			user-select: none;
@@ -163,7 +164,6 @@
 // Hero section small device support
 @media only screen and (max-width: 1024px) {
 	:global {
-
 		// Remove height constraints on outer container
 		#hero-section {
 			height: auto;
@@ -177,7 +177,6 @@
 	}
 
 	.hero- {
-
 		// Centrally align content in the left container
 		&left {
 			align-items: center;
