--- a/src/layout/themes/ThemesSection.scss
+++ b/src/layout/themes/ThemesSection.scss
@@ -3,7 +3,8 @@
 :global {
 	// Outer section
 	#themes-section {
-		border-radius: 0 0 var(--overlay-corner-radius) var(--overlay-corner-radius);
+		border-radius: 0 0 var(--overlay-corner-radius)
+			var(--overlay-corner-radius);
 		background-color: var(--card-background-secondary);
 		overflow: hidden;
 
@@ -22,9 +23,14 @@
 			left: -50%;
 			width: 200vw;
 			height: 200vw;
-			background-image: linear-gradient(90deg, transparent 10%, var(--dots-color, var(--control-stroke-secondary)) 100%);
+			background-image: linear-gradient(
+				90deg,
+				transparent 10%,
+				var(--dots-color, var(--control-stroke-secondary)) 100%
+			);
 			transform: rotate(30deg);
-			mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Ccircle cx='50' cy='50' r='10' fill='%23000' /%3E%3C/svg%3E") center/18px;
+			mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Ccircle cx='50' cy='50' r='10' fill='%23000' /%3E%3C/svg%3E")
+				center/18px;
 		}
 
 		// HACK: --background-base is a fairly generic variable that makes more sense to style on themes other than default.
@@ -94,7 +100,9 @@
 				--accent-text-default: var(--text-color-tertiary);
 				--accent-text-tertiary: var(--accent-text-default);
 				--accent-text-contrast-primary: #000;
-				--accent-text-contrast-secondary: var(--accent-text-contrast-primary);
+				--accent-text-contrast-secondary: var(
+					--accent-text-contrast-primary
+				);
 				--text-color-primary: #000;
 				--text-color-tertiary: #332500;
 				--text-color-secondary: var(--text-color-primary);
@@ -238,8 +246,10 @@
 	&.visible {
 		--initial-delay: 300ms;
 
-		img, .card {
-			animation: showcase-item 250ms cubic-bezier(0, 0, 0, 1) forwards var(--initial-delay);
+		img,
+		.card {
+			animation: showcase-item 250ms cubic-bezier(0, 0, 0, 1) forwards
+				var(--initial-delay);
 		}
 
 		.layout {
@@ -268,9 +278,9 @@
 	}
 
 	// We don't want the 500ms delay we normally get when replaying them.
-	&.no-initial-delay {
-		--initial-delay: 0ms;
-	}
+	// &.no-initial-delay {
+	// 	--initial-delay: 0ms;
+	// }
 }
 
 // Main themes section content
