--- a/src/lib/Button/Button.scss
+++ b/src/lib/Button/Button.scss
@@ -16,8 +16,7 @@
 	text-decoration: none;
 	text-align: left;
 	word-break: break-word;
-	transition: 83ms ease background-color,
-	83ms ease box-shadow;
+	transition: 83ms ease background-color, 83ms ease box-shadow;
 	user-select: none;
 
 	&:hover {
@@ -26,7 +25,6 @@
 
 	// Button styles
 	&.style- {
-
 		// "Default" style
 		&standard {
 			border-color: var(--control-stroke-default);
@@ -114,12 +112,14 @@
 
 		> .button:first-child,
 		> *:first-child .button {
-			border-radius: var(--control-corner-radius) 0 0 var(--control-corner-radius) !important;
+			border-radius: var(--control-corner-radius) 0 0
+				var(--control-corner-radius) !important;
 		}
 
 		> .button:last-child,
 		> *:last-child .button {
-			border-radius: 0 var(--control-corner-radius) var(--control-corner-radius) 0 !important;
+			border-radius: 0 var(--control-corner-radius)
+				var(--control-corner-radius) 0 !important;
 		}
 	}
 }
