--- a/src/lib/Navbar/Navbar.scss
+++ b/src/lib/Navbar/Navbar.scss
@@ -1,6 +1,10 @@
 @use "src/styles/mixins" as *;
 
-.navbar, .inner, .item { @include flex($align: center) }
+.navbar,
+.inner,
+.item {
+	@include flex($align: center);
+}
 
 .navbar {
 	position: relative;
@@ -32,9 +36,13 @@
 		color: var(--accent-text-default);
 	}
 
-	&:hover { background-color: var(--subtle-color-secondary) }
+	&:hover {
+		background-color: var(--subtle-color-secondary);
+	}
 
-	&:active { background-color: var(--subtle-color-tertiary) }
+	&:active {
+		background-color: var(--subtle-color-tertiary);
+	}
 
 	:global(svg) {
 		@include icon($size: 16px);
@@ -59,7 +67,9 @@
 	text-decoration: none;
 	transition: 100ms ease;
 
-	&:hover { color: var(--text-color-secondary) }
+	&:hover {
+		color: var(--text-color-secondary);
+	}
 
 	img {
 		width: auto;
@@ -85,9 +95,13 @@
 	text-decoration: none;
 	cursor: pointer;
 
-	&:hover { background-color: var(--subtle-color-secondary) }
+	&:hover {
+		background-color: var(--subtle-color-secondary);
+	}
 
-	&:active { background-color: var(--subtle-color-tertiary) }
+	&:active {
+		background-color: var(--subtle-color-tertiary);
+	}
 
 	:global(svg) {
 		transition: 130ms cubic-bezier(0.16, 0.16, 0, 1) transform;
@@ -99,9 +113,13 @@
 	.navbar .button.sidebar-button {
 		width: 38px;
 
-		&:active svg { transform: scaleX(0.65) }
+		&:active svg {
+			transform: scaleX(0.65);
+		}
 
-		svg { width: 16px }
+		svg {
+			width: 16px;
+		}
 	}
 }
 
@@ -143,7 +161,11 @@
 		backdrop-filter: blur(60px) saturate(150%);
 	}
 
-	.sidebar { @include flex($direction: column, $justify: space-between); }
+	.sidebar {
+		@include flex($direction: column, $justify: space-between);
+	}
 
-	:global(body) { padding-top: 62px; }
+	:global(body) {
+		padding-top: 62px;
+	}
 }
