--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -90,7 +90,8 @@
 		margin-bottom: 0;
 	}
 
-	ol, ul {
+	ol,
+	ul {
 		padding-left: 2em;
 	}
 
@@ -98,16 +99,19 @@
 		margin-top: 0.25em;
 	}
 
-	ol ol, ul ol {
+	ol ol,
+	ul ol {
 		list-style-type: lower-roman;
 	}
 
-	ol, ul {
+	ol,
+	ul {
 		padding-left: 2em;
 	}
 
 	// Codeblocks
-	code, kbd {
+	code,
+	kbd {
 		margin: 0;
 		padding: 0.2em 0.4em;
 		border: 1px solid var(--card-stroke-default);
@@ -148,7 +152,8 @@
 		text-decoration: underline;
 		text-decoration-skip-ink: none;
 
-		&:hover, &:active {
+		&:hover,
+		&:active {
 			text-decoration: none;
 		}
 
