Fixed blog. Made the tilt effect on the main blog post less pronounced. Reformatted all files to fit with prettier rules. Updated packages.

--- a/src/lib/TextBox/TextBox.scss
+++ b/src/lib/TextBox/TextBox.scss
@@ -62,8 +62,7 @@
 			&.flyout-visible {
 				&,
 				.textbox-container {
-					border-radius: var(--control-corner-radius)
-						var(--control-corner-radius) 0 0;
+					border-radius: var(--control-corner-radius) var(--control-corner-radius) 0 0;
 				}
 			}
 		}
