--- a/src/layout/features/FeatureShowcase.scss
+++ b/src/layout/features/FeatureShowcase.scss
@@ -24,11 +24,11 @@
 	border-radius: var(--overlay-corner-radius);
 	background-color: var(--background-base);
 	box-shadow: 0 2.74416px 2.74416px rgb(0 0 0 / 3%),
-		0 5.48831px 5.48831px rgb(0 0 0 / 4%),
-		0 13.7208px 10.9766px rgb(0 0 0 / 5%),
-		0 20.5812px 20.5812px rgb(0 0 0 / 6%),
-		0 41.1623px 41.1623px rgb(0 0 0 / 7%),
-		0 96.0454px 89.1851px rgb(0 0 0 / 9%);
+	0 5.48831px 5.48831px rgb(0 0 0 / 4%),
+	0 13.7208px 10.9766px rgb(0 0 0 / 5%),
+	0 20.5812px 20.5812px rgb(0 0 0 / 6%),
+	0 41.1623px 41.1623px rgb(0 0 0 / 7%),
+	0 96.0454px 89.1851px rgb(0 0 0 / 9%);
 	font-family: "Segoe UI Variable Text", var(--font-family-sans-serif);
 	user-select: none;
 
@@ -44,8 +44,7 @@
 @keyframes feature-panel {
 	from {
 		opacity: 0;
-		transform: translate(var(--panel-offset, 0px), var(--panel-offset, 0px))
-			scale(calc(0.9 + var(--panel-scale, 0)));
+		transform: translate(var(--panel-offset, 0px), var(--panel-offset, 0px)) scale(calc(0.9 + var(--panel-scale, 0)));
 		transform-origin: bottom;
 	}
 }
@@ -101,8 +100,7 @@
 .cloud-files-showcase {
 	width: 416px;
 	max-width: 100%;
-	animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards
-		400ms;
+	animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
 
 	// Files table (details view)
 	table {
@@ -183,8 +181,7 @@
 
 			:global(svg) {
 				@include icon($size: 20px);
-				animation: 250ms ease feature-item-scale backwards
-					calc(600ms + (100ms * var(--file-index)));
+				animation: 250ms ease feature-item-scale backwards calc(600ms + (100ms * var(--file-index)));
 			}
 		}
 	}
@@ -201,9 +198,8 @@
 		&:nth-child(1) {
 			bottom: 36px;
 			left: -54px;
-			animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1)
-					backwards 800ms,
-				cloud-provider-float 10s ease infinite 1000ms;
+			animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 800ms,
+			cloud-provider-float 10s ease infinite 1000ms;
 			--provider-rotate: 5deg;
 		}
 
@@ -211,9 +207,8 @@
 			top: 12px;
 			right: -54px;
 			width: 128px;
-			animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1)
-					backwards 1000ms,
-				cloud-provider-float 10s ease infinite 1400ms;
+			animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 1000ms,
+			cloud-provider-float 10s ease infinite 1400ms;
 			--provider-rotate: -8deg;
 		}
 	}
@@ -228,10 +223,8 @@
 		@include flex($direction: column);
 		width: 260px;
 		height: 390px;
-		border-radius: var(--overlay-corner-radius) 0 0
-			var(--overlay-corner-radius);
-		animation: 400ms cubic-bezier(0.1, 0.9, 0.2, 1) preview-pane-open
-			backwards 800ms;
+		border-radius: var(--overlay-corner-radius) 0 0 var(--overlay-corner-radius);
+		animation: 400ms cubic-bezier(0.1, 0.9, 0.2, 1) preview-pane-open backwards 800ms;
 
 		// Inner preview pane elements
 		// File preview and file metadata
@@ -364,15 +357,14 @@
 		display: grid;
 		grid-gap: 4px;
 		padding: 12px;
-		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1)
-			backwards 400ms;
+		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
 
 		// File entries
 		.file {
 			@include flex(
-				$direction: column,
-				$justify: between,
-				$align: center
+					$direction: column,
+					$justify: between,
+					$align: center
 			);
 			width: 84px;
 			height: 96px;
@@ -393,7 +385,7 @@
 				border-radius: calc(var(--control-corner-radius) + 2px);
 				background-color: var(--subtle-color-secondary);
 				box-shadow: inset 0 0 0 2px var(--accent-color-default),
-					inset 0 0 0 3px var(--background-base);
+				inset 0 0 0 3px var(--background-base);
 			}
 
 			// File entry icon
@@ -408,8 +400,7 @@
 // Tags showcase
 .tags-showcase {
 	.showcase-panel {
-		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1)
-			backwards 400ms;
+		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
 	}
 
 	> .showcase-panel {
@@ -428,8 +419,7 @@
 	}
 
 	:global(.color-swatch) {
-		animation: 250ms ease feature-item-scale backwards
-			calc(800ms + (100ms * var(--color-index)));
+		animation: 250ms ease feature-item-scale backwards calc(800ms + (100ms * var(--color-index)));
 	}
 }
 
@@ -441,23 +431,20 @@
 		position: absolute;
 		width: 400px;
 		height: 300px;
-		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1)
-			backwards 800ms;
+		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 800ms;
 		overflow: hidden;
 
 		&:first-child {
 			transform: translate(var(--panel-offset), var(--panel-offset));
-			animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1)
-					backwards 400ms,
-				merge-windows 250ms ease forwards 2s;
+			animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms,
+			merge-windows 250ms ease forwards 2s;
 			--panel-offset: -32px;
 		}
 
 		&:last-child {
 			transform: translate(var(--panel-offset), var(--panel-offset));
-			animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1)
-					backwards 1200ms,
-				merge-windows 250ms ease forwards 2s;
+			animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 1200ms,
+			merge-windows 250ms ease forwards 2s;
 			--panel-offset: 32px;
 		}
 	}
