--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -104,8 +104,7 @@
 		max-height: 350px;
 		padding: 2px 0;
 		border: 1px solid var(--surface-stroke-flyout);
-		border-radius: 0 0 var(--overlay-corner-radius)
-			var(--overlay-corner-radius);
+		border-radius: 0 0 var(--overlay-corner-radius) var(--overlay-corner-radius);
 		background-color: var(--background-quarternary);
 		box-shadow: var(--flyout-elevation);
 	}
