--- a/src/lib/PageSection/PageSection.scss
+++ b/src/lib/PageSection/PageSection.scss
@@ -29,12 +29,15 @@
 			max-width: 65ch;
 			margin-top: 12px;
 			margin-bottom: 24px;
-			color: var(--text-color-tertiary);
+			color: var(--text-color-secondary);
 			font: {
 				size: 1.6rem;
 				weight: 400;
 			}
 			line-height: 1.65;
+			@media (prefers-color-scheme: dark) {
+				color: var(--text-color-tertiary);
+			}
 		}
 
 		hr {
