Fix mobile footer selector, set breakpoint to 768px

--- a/src/layout/Footer/Footer.scss
+++ b/src/layout/Footer/Footer.scss
@@ -37,8 +37,8 @@
     }
 }
 
-@media only screen and (max-width: 500px) {
-    :global(#footer .page-section-inner) {
+@media only screen and (max-width: 768px) {
+    :global(#page-footer .page-section-inner) {
         grid-template-columns: auto;
     }
 }
