themes section refinements

--- a/src/lib/ComponentShowcase/ComponentShowcase.scss
+++ b/src/lib/ComponentShowcase/ComponentShowcase.scss
@@ -1,49 +1,39 @@
 @use "src/styles/mixins" as *;
 
 .component-showcase {
-  pointer-events: none;
-  @include flex($align: center, $gap: 16px);
+	pointer-events: none;
+	@include flex($gap: 16px);  
 
-  .column {
-    @include flex($direction: column, $gap: 16px);
+	.column {
+		@include flex($direction: column, $gap: 16px);
 
-    &.left {
-      align-items: flex-end;
-    }
+		> div {
+			@include flex($gap: 16px);
+		}
 
-    &.right {
-      align-items: flex-start;
-    }
-  }
+		&.left {
+			align-items: flex-end;
+		}
 
-  :global(svg) {
-    border-radius: var(--overlay-corner-radius);
-    box-shadow: var(--flyout-elevation);
-  }
-}
+        @media only screen and (max-width: 1224px) {
+            .drive,
+            .properties {
+                display: none;
+            }
+            .card {
+                order: -1;
+            }
+        }
+	}
 
-:global(svg .accent-color) {
-  fill: var(--accent-color-default);
-  stroke: var(--accent-color-default);
-}
+	.card {
+		width: 100%;
+		background-color: var(--layer-color-default);
+	}
 
-:global {
-  @media only screen and (max-width: 1224px) {
-    .DatePicker,
-    .TeachingTip {
-      visibility: hidden;
-    }
-  }
-
-  @media only screen and (max-width: 856px) {
-    .NavigationView {
-      visibility: hidden;
-    }
-  }
-}
-
-@media only screen and (max-width: 620px) {
-  .component-showcase {
-    display: none;
-  }
+	img,
+	.card {
+		border-radius: var(--overlay-corner-radius);
+		box-shadow: var(--flyout-elevation);
+	}
 }
