--- a/src/layout/FeaturesSection/FeatureShowcase.scss
+++ b/src/layout/FeaturesSection/FeatureShowcase.scss
@@ -56,6 +56,13 @@
 	}
 }
 
+// Generic fade animation
+@keyframes fade {
+	from {
+		opacity: 0;
+	}
+}
+
 // Cloud icon entrance animation
 @keyframes cloud-provider {
 	from {
@@ -90,6 +97,20 @@
 	to {
 		transform: none;
 		box-shadow: none;
+	}
+}
+
+// Tab slide-in animation
+@keyframes tab-slide {
+	from {
+		transform: translateY(100%);
+	}
+}
+
+// Tab strip overflow hack to show tab shadows after animation
+@keyframes show-overflow {
+	to {
+		overflow: visible;
 	}
 }
 
@@ -367,6 +388,7 @@
 		// File entries
 		.file {
 			@include flex($direction: column, $justify: between, $align: center);
+			animation: 250ms ease feature-item-scale backwards calc(400ms + (100ms * var(--file-index)));
 			width: 84px;
 			height: 96px;
 			padding: 12px;
@@ -431,6 +453,7 @@
 	@include flex($align: center, $justify: center);
 
 	.showcase-panel {
+		@include flex($direction: column);
 		position: absolute;
 		width: 400px;
 		height: 300px;
@@ -452,6 +475,83 @@
 					backwards 1200ms,
 				merge-windows 250ms ease forwards 2s;
 			--panel-offset: 32px;
+		}
+	}
+
+	.files-grid {
+		animation: fade 250ms ease backwards 2.2s;
+		background-color: var(--layer-color-default);
+		border-top: 1px solid var(--card-stroke-default);
+		flex: 1 1 auto;
+		padding: 12px;
+		display: grid;
+		grid-gap: 12px;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-template-rows: 1fr 1fr 1fr;
+	}
+
+	.placeholder-file {
+		animation: 250ms ease feature-item-scale backwards calc(2.4s + (100ms * var(--file-index)));
+		border-radius: var(--control-corner-radius);
+		background-color: var(--subtle-color-secondary);
+	}
+
+	.tabs-anchor {
+		position: absolute;
+		margin-top: -40px;
+		.showcase-panel {
+			position: relative;
+		}
+	}
+
+	.tab {
+		@include flex($align: center, $gap: 8px);
+		user-select: none;
+		animation: tab-slide 500ms ease backwards 2.4s;
+		padding: 0 12px;
+		width: 100%;
+		height: 32px;
+		border-radius: var(--control-corner-radius);
+		border: 1px solid var(--control-stroke-default);
+		background-clip: padding-box;
+		backdrop-filter: blur(10px);
+		color: var(--text-color-primary);
+		font: {
+			size: var(--control-font-size);
+		}
+		&:nth-child(2) {
+			animation-delay: 2.6s;
+		}
+		&:last-child {
+			animation-delay: 2.8s;
+		}
+		&:hover {
+			background-color: var(--subtle-color-secondary);
+		}
+		&:active {
+			background-color: var(--subtle-color-tertiary);
+		}
+		&.selected {
+			box-shadow: var(--card-elevation);
+			background-color: var(--control-color-default);
+			border-top-color: var(--control-stroke-secondary);
+			@media (prefers-color-scheme: light) {
+				border-top-color: var(--control-color-default);
+				border-bottom-color: var(--control-color-secondary) 
+			}
+		}
+		img {
+			width: 16px;
+			height: 16px;
+			flex: 0 0 auto;
+		}
+		&-row {
+			@include flex($align: center, $gap: 8px);
+			margin-bottom: 8px;
+			animation: show-overflow 0ms linear forwards 2.8s;
+			z-index: 1;
+			overflow: hidden;
+			width: 100%;
 		}
 	}
 }
