Started fixing a bunch of small issues: - Meta images now load correctly based on the page - The error window now has a min width and height - Fixed the text wrapping issue on the file preview showcase - Fixed a typo on the file preview showcase - Updated packages.
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/styles/pages/error.scss
+++ b/src/styles/pages/error.scss
@@ -33,13 +33,13 @@
 		border-radius: 0;
 		background: silver;
 		box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff,
-			inset -2px -2px grey, inset 2px 2px #dfdfdf;
+		inset -2px -2px grey, inset 2px 2px #dfdfdf;
 		font-size: 1.2rem;
 
 		&:not(:disabled):active {
 			padding: 2px 11px 0 13px;
 			box-shadow: inset -1px -1px #fff, inset 1px 1px #0a0a0a,
-				inset -2px -2px #dfdfdf, inset 2px 2px grey;
+			inset -2px -2px #dfdfdf, inset 2px 2px grey;
 		}
 
 		&:focus {
@@ -54,7 +54,7 @@
 		padding: 12px 8px;
 		background: #fff;
 		box-shadow: inset -1px -1px #fff, inset 1px 1px grey,
-			inset -2px -2px #dfdfdf, inset 2px 2px #0a0a0a;
+		inset -2px -2px #dfdfdf, inset 2px 2px #0a0a0a;
 		overflow: auto;
 
 		code {
@@ -112,7 +112,7 @@
 		&-thumb {
 			background-color: #dfdfdf;
 			box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff,
-				inset -2px -2px #808080, inset 2px 2px #dfdfdf;
+			inset -2px -2px #808080, inset 2px 2px #dfdfdf;
 		}
 	}
 }
@@ -120,14 +120,19 @@
 .window {
 	@include flex($direction: column);
 	position: absolute;
+	min: {
+		width: 150px;
+		height: 375px;
+	};
 	width: 380px;
 	max-width: calc(100% - 48px);
 	padding: 3px;
 	background: silver;
 	box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf,
-		inset -2px -2px grey, inset 2px 2px #fff;
+	inset -2px -2px grey, inset 2px 2px #fff;
 	overflow: auto;
 	resize: both;
+
 	@media only screen and (max-width: 648px) {
 		position: absolute;
 		top: 0;
